--- a/src/components/firstPage/BackImg.css
+++ b/src/components/firstPage/BackImg.css
@@ -1,42 +1,63 @@
-*{
+* {
     margin: 0;
     padding: 0;
-   
 }
+
 .imgsection {
     font-weight: bolder;
     font-family: 'Courier New', Courier, monospace;
-    display: flex;
+    /* display: flex; */
+
 }
 
 .imgtext {
-    padding: 150px 110px;
-    /* text-align: center; */
-    display: flex;
-    /* color: #fff; */
+    padding: 30px 30px;
+    /*display: flex;*/
     flex-direction: column;
     align-items: flex-start;
     font-size: 40px;
-    
-}
-.text1{
-    font-size: 20px;
-    color: #000000;
-    text-align: center;
-    font-size: 40px;
-}
-.imgsection p{
-     color: #053607;
-     text-align: center;
-}
-Button{
-    font-weight: 900;
-    width: 200px;
    
 }
-Button:hover{
-    border: #fff solid;
+.intro{
+    text-align: center;
+    margin:10px;
+    padding-top: 40px;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
 }
+.middle{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+.text1 {
+    font-size: 30px; /* Updated to remove duplicate font-size property */
+    color: #1a1111;
+    text-align: center;
+    padding-top: 30px;
+}
+
+.imgsection p {
+    color: #053607;
+    text-align: center;
+}
+
+.imgsection img {
+    filter: blur(5px); /* Blur effect on images within the .imgsection class */
+}
+
+button {
+    font-weight: 900;
+    width: 200px;
+    margin-top: 20px;
+}
+
+button:hover {
+    border: 1px solid #fff; /* Adjusted to include '1px' for the border size */
+}
+
+
+  
+  
+
 
   
   
