--- a/src/components/firstPage/about.css
+++ b/src/components/firstPage/about.css
@@ -3,7 +3,7 @@
     /* max-width: 600px; */
     margin: 0 auto;
     padding: 175px;
-    color: #010101;
+    color: #f7f4f4;
     font-weight: bold;
     text-align: center;
     /* background-color: rgb(6, 144, 19); */
